--- a/Gym_App/app/src/main/AndroidManifest.xml
+++ b/Gym_App/app/src/main/AndroidManifest.xml
@@ -48,6 +48,14 @@
             android:label="@string/title_activity_actividad_fragmentos"
             android:theme="@style/AppTheme.NoActionBar">
 
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
         </activity>
     </application>
 
